Fix column layout on Firefox

--- a/css/top.css
+++ b/css/top.css
@@ -317,8 +317,10 @@ a.download:hover {
 }
 #features section {
 	-webkit-column-break-inside: avoid;
+	          -moz-break-inside: avoid;
 	               break-inside: avoid;
 	margin: 0;
+	padding-top: 1px;  /* hack for firefox */
 	padding-bottom: 1.2em;
 }
 #features section img {
